# gamepass_api

./: db.py  example.ipynb  gamepass_fetcher.py  opencritic_fethcer.py  pyproject.toml  readme.md  requirements.txt
