[tool.poetry]
name = "gamepass_api"
version = "0.1.0"
description = "API for getting games from Xbox gamepass with accompanying reviews from opencritic"
authors = ["Terje Espedal <terje.m.espedal@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.0"
arrow = "^1.1.1"
numpy = "^1.21.1"
requests = "^2.26.0"
SQLAlchemy = "^1.4.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
